set up handlebars template engine, routed main.hbs to controller render

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-:root {
-  
-}   
+/* :root {
+         TODO add our colors.
+}    */
 
 /* Resets the box size of every element */
 * {
@@ -31,4 +31,4 @@
     font-family: inherit;
   }
   
-  
+ 
