home page css/styling done except for the desk stickies

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#ADULTING</title>
+    <title>Hashtag Adulting</title>
+    <link rel="stylesheet" href="https://use.typekit.net/gwq5uif.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
-        <h1>#ADULTING</h1>
+        <h1>#Adulting</h1>
     </header>
     <main>
-     {{!-- {{{body}}} --}}
-        <section id="wall">
-
-        </section>
+     {{{body}}} 
+        
     </main>
     
 </body>
