added a auth js and handlebar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,24 @@
 </head>
 <body>
     <header>
+
         <h1>#ADULTING</h1>
+
     </header>
+
+    <section id="chalkBoard">
+
+        <h2>Adulting made easy</h2>
+        <h3>Hassle-free reminders for your busy life.</h3>
+
+    </section>
+
+    <aside id="bigSticky">
+
+        {{signIn}}
+
+    </aside>
+
     <main>
      {{!-- {{{body}}} --}}
         <section id="wall">
