--- a/views/partials/signIn.handlebars
+++ b/views/partials/signIn.handlebars
@@ -1,6 +1,8 @@
 <div>
     <h4>Welcome!</h4>
-    <input type="username" name="user" placeholder="Username">
-    <input type="password" name="pass" placeholder="Password">
-    <button type="submit"> Submit</button>
+    <form action="" id="login-form">
+        <input type="email" id="email" placeholder="Email">
+        <input type="password" id="pass" placeholder="Password">
+        <button type="submit"> Submit</button>
+    </form>
 </div>
