added login and client side js

--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -1,8 +1,8 @@
-<div>
-    <h4>Welcome!</h4>
-    <form action="" id="login-form">
+<h4>Sign-Up!</h4>
+    <form action="" id="signup-form">
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="pass" placeholder="Password">
-        <button type="submit"> Submit</button>
+        <button type="submit">Submit</button>
     </form>
-</div>
+
+<script src="js/auth.js"></script>
