--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,6 +16,14 @@
     </section>
 
     <aside id="bigSticky">
+      <h3>Login</h3>
+      <form action="" id="login-form">
+        <input type="email" placeholder="email" id="login-email">
+        <input type="password" placeholder="password" id="login-password">
+        <button>Login</button>
+      </form>
+
+      <script src="/js/script.js"></script>
 
     </aside>
   </section>
