--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,22 +1,41 @@
 <section id="allHome">
   <section id="center">
     <section id="chalkBoard">
-      <div id="catchPhrase">
-        <h2>Adulting made easy:</h2>
-        <h3>Hassle-free reminders for your busy life.</h3>
-        <span id="line"></span>
-        <div id="about">
-          <p>
-            With easy-to-use reminders for everything from changing air filters
-            to getting your oil changed, #Adulting makes it easy to stay on
-            track and avoid costly repairs down the line. Download #Adulting
-            today and take the first step towards stress-free maintenance!</p>
-        </div>
+      <div id="nextUp">
+        <h2>Next Up...</h2>
+        <span id="lineDash"></span>
+        <ol id="nextTasks">
+            <li class="task" data-id="">Pet: Annual vet checkup for Fido.</li>
+            <li class="task" data-id="">Car: Replace windshield wipers: frequencey 6-12 months.</li>
+            <li class="task" data-id="">House: Change air filters: frequency 3-6 months.</li>
+            <li class="task" data-id="">House: Roof inspection: frequency 2-3 years.</li>
+            <li class="task" data-id="">Pet: Trim nails: frequency 4-6 weeks.</li>
+        </ol>
+        
       </div>
     </section>
 
-    <aside id="bigSticky">
-
+    <aside id="biggerSticky" >
+        <div id="taksList">
+            <div id="stickHead">
+                <h4 id="emoji">🏠</h4>
+                <h4 id="name" class="bigStickyTitle">House</h4>
+            </div>
+            <div id="listCenter">
+            <div id="remindList">
+                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+                
+            </div>
+            </div>
+            <div id="btn">
+                <button>+ Add Task</button>
+            </div>
+            
+        </div>
     </aside>
   </section>
   <section id="desk">
