--- a/views/categoryEditor.handlebars
+++ b/views/categoryEditor.handlebars
@@ -1,16 +1,16 @@
+
 <section id="allHome">
   <section id="center">
     <section id="chalkBoard">
-      <div id="catchPhrase">
-        <h2>Adulting made easy:</h2>
-        <h3>Hassle-free reminders for your busy life.</h3>
-        <span id="line"></span>
-        <div id="about">
-          <p>
-            With easy-to-use reminders for everything from changing air filters
-            to getting your oil changed, #Adulting makes it easy to stay on
-            track and avoid costly repairs down the line. Download #Adulting
-            today and take the first step towards stress-free maintenance!</p>
+      <div id="categoryEditor">
+            <h4 id="emoji"></h4>
+            <h4 id="name"></h4>
+            <ul id="color-picker"></ul>
+            <li id="color1"></li>
+            <li id="color2"></li>
+            <button id="save-button">Save</button>
+
+            <script src="/js/categoryEditor.js"></script>
         </div>
       </div>
     </section>
