--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -1,3 +1,19 @@
+<section id="allHome">
+  <section id="center">
+    <section id="chalkBoard">
+      <div id="catchPhrase">
+        <h2>Adulting made easy:</h2>
+        <h3>Hassle-free reminders for your busy life.</h3>
+        <span id="line"></span>
+        <div id="about">
+          <p>
+           {{!-- TODO: Brents magic words here --}}
+           </p>
+        </div>
+      </div>
+    </section>
+
+    <aside id="bigSticky">
 <h4>Sign-Up!</h4>
     <form action="" id="signup-form">
         <input type="email" id="email" placeholder="Email">
@@ -5,4 +21,25 @@
         <button type="submit">Submit</button>
     </form>
 
-<script src="js/auth.js"></script>
+<script src="/js/auth.js"></script>
+
+    </aside>
+  </section>
+  <section id="desk">
+        <div id="sticky">
+        {{!-- placeholder --}}
+        </div>
+        <div id="sticky">
+        {{!-- placeholder --}}
+        </div>
+        <div id="sticky">
+        {{!-- placeholder --}}
+        </div>
+        <div id="sticky">
+        {{!-- placeholder --}}
+        </div>
+        <div id="addCategory">
+            <h5 id="acc">Add Custom Category</h5>
+        </div>
+  </section>
+</section>
