--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,57 +2,61 @@
   <section id="center">
     <section id="chalkBoard">
       <div id="nextUp">
-        <h2>Next Up...</h2>
+        <h2 id="chalkHeader">Next Up...</h2>
         <span id="lineDash"></span>
         <ol id="nextTasks">
-            <li class="task" data-id="">Pet: Annual vet checkup for Fido.</li>
-            <li class="task" data-id="">Car: Replace windshield wipers: frequencey 6-12 months.</li>
-            <li class="task" data-id="">House: Change air filters: frequency 3-6 months.</li>
-            <li class="task" data-id="">House: Roof inspection: frequency 2-3 years.</li>
-            <li class="task" data-id="">Pet: Trim nails: frequency 4-6 weeks.</li>
+          <li class="task" data-id="">Pet: Annual vet checkup for Fido.</li>
+          <li class="task" data-id="">Car: Replace windshield wipers: frequencey
+            6-12 months.</li>
+          <li class="task" data-id="">House: Change air filters: frequency 3-6
+            months.</li>
+          <li class="task" data-id="">House: Roof inspection: frequency 2-3
+            years.</li>
+          <li class="task" data-id="">Pet: Trim nails: frequency 4-6 weeks.</li>
         </ol>
-        
+
       </div>
     </section>
 
-    <aside id="biggerSticky" >
-        <div id="taksList">
-            <div id="stickHead">
-                <h4 id="emoji">🏠</h4>
-                <h4 id="name" class="bigStickyTitle">House</h4>
-            </div>
-            <div id="listCenter">
-            <div id="remindList">
-                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
-                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
-                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
-                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
-                <li id="reminders" data-id="">Very important house stuff to do like now.</li>
-                
-            </div>
-            </div>
-            <div id="btn">
-                <button>+ Add Task</button>
-            </div>
-            
-        </div>
+    <aside id="biggerSticky">
+      <div id="stickHead">
+        <h4 id="name" class="bigStickyTitle">House</h4>
+        <h4 id="emoji">🏠</h4>
+      </div>
+      <div id="remindList">
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+        <li id="reminders" data-id="">Very important house stuff to do like now.</li>
+
+      </div>
+
+      <div id="btn">
+        <button>+ Add Task</button>
+      </div>
+
     </aside>
   </section>
   <section id="desk">
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="sticky">
-        {{!-- placeholder --}}
-        </div>
-        <div id="addCategory">
-            <h5 id="acc">Add Custom Category</h5>
-        </div>
+    <div id="sticky">
+      {{! placeholder }}
+    </div>
+    <div id="sticky">
+      {{! placeholder }}
+    </div>
+    <div id="sticky">
+      {{! placeholder }}
+    </div>
+    <div id="sticky">
+      {{! placeholder }}
+    </div>
+    <div id="addCategory">
+      <h5 id="acc">Add Custom Category</h5>
+    </div>
   </section>
 </section>
