--- a/views/categoryEditor.handlebars
+++ b/views/categoryEditor.handlebars
@@ -3,13 +3,25 @@
   <section id="center">
     <section id="chalkBoard">
       <div id="categoryEditor">
-            <h4 id="emoji"></h4>
-            <h4 id="name"></h4>
-            <ul id="color-picker"></ul>
-            <li id="color1"></li>
-            <li id="color2"></li>
-            <button id="save-button">Save</button>
-
+        <form>
+            <label for="emoji"></label>
+            <input type="text" id="emoji">
+            
+            <input type ="text" id="name">Name of category:</input>
+            <p>Please select a color:</p>
+            <label for ="red">Red</label>
+            <input type ="radio" id="color1" name="color">
+            <label for ="blue">Blue</label>
+            <input type ="radio" id="color2" name="color">
+            <label for ="green">Green</label>
+            <input type ="radio" id="color3" name="color">
+            <label for ="yellow">Yellow</label>
+            <input type ="radio" id="color4" name="color">
+            <label for ="purple">Purple</label>
+            <input type ="radio" id="color5" name="color">
+            <input type = "submit" value = "Submit" id = "save-button">Save</input>
+        </form>
+            
             <script src="/js/categoryEditor.js"></script>
         </div>
       </div>
