--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>#ADULTING</h1>
+        <h1><a href="/">#ADULTING</a></h1>
     </header>
 
     <main>
