--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,12 +105,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content:first baseline;
+  justify-content: first baseline;
   background-color: #F469F4;
   /* border: 1px dashed grey; */
   height: 22rem;
   width: 22rem;
-  padding: 20px;
+  padding: 15px;
  }
 
  #catchPhrase{
@@ -191,8 +191,9 @@
   #biggerSticky{
     display: flex;
     flex-direction: column;
-    padding: 30px;
-    background-color: var(--pink-sticky);
+    padding: 10px;
+    padding-bottom: 40px;
+    background-color: var(--blue-sticky);
   /* border: 1px dashed grey; */
     height: 29rem;
     width: 50rem;
@@ -224,20 +225,21 @@ li{
   display: flex;
   justify-content: center;
   align-items: center;
-  height:50px;
-  width:50px;
+  height:70px;
+  width:70px;
   font-size: 29px;
   text-align: center;
-  border: 1px solid rgb(117, 115, 115);
+  border: 2px solid rgb(184, 183, 183);
   border-radius: 50px;
   background-color: rgb(250, 249, 249);
   margin-bottom: 10px;
 }
 #stickHead{
-  margin: 0 30px 0 30px;
+  margin: 0 10px 0 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
   height: 5rem;
 
 }
@@ -270,7 +272,7 @@ color:rgb(41, 41, 41);
   display: flex;
   flex-direction: column;
   justify-content:flex-start;
-  align-items: center;
+  align-items: flex-start;
   margin: 15px 40px 5px 40px
 
 }
@@ -313,7 +315,7 @@ label{
   font-weight: 300;
   font-style: normal;
 margin-top: 15px;
-padding: 5px 10px 5px 10px;
+padding: 5px 0px 5px 10px;
 font-size: 18px;
 color: rgb(181, 178, 178);
 border-radius: 15px;
