--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
   <section id="center">
     <section id="chalkBoard">
       <div id="nextUp">
-        <h2 id="chalkHeader">Next Up...</h2>
+        <h2 id="chalkHeader">Welcome back {{user.name}} here's what's up next...</h2>
         <span id="lineDash"></span>
         <ol id="nextTasks">
           <li class="task" data-id="">Pet: Annual vet checkup for Fido.</li>
