fixing merge conflicts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -339,7 +339,7 @@ label{
   margin:3px;
 }
 
-#logBtn{
+#login-button{
   font-family: "larken", sans-serif;
   font-weight: 300;
   font-style: normal;
