continued category editor changes

--- a/views/categoryEditor.handlebars
+++ b/views/categoryEditor.handlebars
@@ -9,15 +9,15 @@
             
             <input type ="text" id="name">Name of category:</input>
             <p>Please select a color:</p>
-            <label for ="red">Red</label>
+            <label for ="pink">Pink</label>
             <input type ="radio" id="color1" name="color">
             <label for ="blue">Blue</label>
             <input type ="radio" id="color2" name="color">
-            <label for ="green">Green</label>
+            <label for ="magenta">Magenta</label>
             <input type ="radio" id="color3" name="color">
             <label for ="yellow">Yellow</label>
             <input type ="radio" id="color4" name="color">
-            <label for ="purple">Purple</label>
+            <label for ="teal">Teal</label>
             <input type ="radio" id="color5" name="color">
             <input type = "submit" value = "Submit" id = "save-button">Save</input>
         </form>
