updated the logout button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,8 @@
 <body>
     <header>
         <h1><a href="/">#ADULTING</a></h1>
+        <a href="/logout" id="logout">Logout</a>
+       
     </header>
 
     <main>
