--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -16,8 +16,8 @@
     <aside id="bigSticky">
 <h4>Sign-Up!</h4>
     <form action="" id="signup-form">
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="pass" placeholder="Password">
+        <input type="email" id="signup-email" placeholder="Email">
+        <input type="password" id="signup-password" placeholder="Password">
         <button type="submit">Submit</button>
     </form>
 
