--- a/views/partials/sticky.handlebars
+++ b/views/partials/sticky.handlebars
@@ -1,4 +1,4 @@
-<div id="sticky" style="background-color:{{category.color}}">
-    <h5>{{category.emoji}}</h5>
-    <h5>{{category.name}}</h5>
+<div id="sticky" data-CategoryId={{id}} style="background-color:{{color}}">
+    <h5>{{emoji}}</h5>
+    <h5>{{name}}</h5>
 </div>
