updated sign up jscript

--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -18,6 +18,7 @@
     <form action="" id="signup-form">
         <input type="email" id="signup-email" placeholder="Email">
         <input type="password" id="signup-password" placeholder="Password">
+        <input type="password" id="signup-password-confirmation" placeholder="Password Confirmation">
         <button type="submit">Submit</button>
     </form>
 
