connect signup and login to backend

--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -22,7 +22,7 @@
         <button type="submit">Submit</button>
     </form>
 
-<script src="/js/auth.js"></script>
+<script src="/js/signup.js"></script>
 
     </aside>
   </section>
