--- a/public/css/style.css
+++ b/public/css/style.css
@@ -291,7 +291,7 @@ border-radius: 15px;
 background-color: rgb(41, 41, 41);
 border-style: none;
 }
-#reminders{
+.reminders{
   font-size: 20px;
   font-weight: 900;
   color: black;
