--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,7 @@
 <body>
     <header>
         <h1><a href="/">#ADULTING</a></h1>
-        <a href="/logout" id="logout">Logout</a>
-       
+        <a href="/logout" id="logout" style="color:white">Logout</a>
     </header>
 
     <main>
