category-editor style, already signed in link, wizard css, dashboard CSS

--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -20,6 +20,7 @@
         <input type="password" id="pass" placeholder="Password">
         <button type="submit">Submit</button>
     </form>
+    <a id="sI" href="/home">Already have an account? Click here.</a>
 
 <script src="/js/auth.js"></script>
 
