--- a/views/wizard.handlebars
+++ b/views/wizard.handlebars
@@ -30,7 +30,7 @@
     <aside id="biggerSticky">
       <div id="stickHead">
         <h4 id="name" class="bigStickyTitle">House</h4>
-        <h4 id="emoji">🏠</h4>
+        <h4 id="emoji1">🏠</h4>
       </div>
       <div id="remindList">
         <li id="reminders" data-id="">Very important house stuff to do like now.</li>
