--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,19 @@
     color: inherit; 
     text-decoration: none; 
   }
+
+  #sI{
+    text-align: center;
+    margin: 10px;
+    color:white;
+    font-size: 12px;
+    font-weight: 300;
+  }
+
+  #sI:hover{
+    color: var(--blue-sticky)
+  }
+  
   a:hover{
     color: var(--blue-sticky)
   }
@@ -256,7 +269,7 @@ li{
   text-align: left;
 }
 
-#emoji{
+#emoji1{
   box-shadow: 0 0 12px -5px rgb(251, 250, 250);
   display: flex;
   justify-content: center;
@@ -395,6 +408,7 @@ border-radius: 15px;
   margin-top:5px;
   margin-bottom:5px;
   justify-content: flex-end;
+
   
 }
 input[type="checkbox"] {
@@ -414,4 +428,128 @@ input[type="checkbox"]:checked {
   /* define the appearance of the checked checkbox */
   background-color: var(--blue-sticky);
   border-color: var(--blue-sticky);
+}
+
+.emojiCat{
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-end;
+margin-left: 20px;
+margin-top:30px;
+height: 352px;
+}
+
+.catTitle{
+  color: rgb(143, 140, 140);
+}
+
+.catEdTitle{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin:10px;
+
+}
+
+#colorList{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  max-height: 352px;
+  width:300px
+  }
+
+.colorPick{
+  appearance: none;
+  background-color: #c1c3c1;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+.sticyColor{
+  margin:5px;
+  text-align: left;
+}
+
+.colorName{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 16px;
+  background-color: rgb(45, 45, 45);
+  color: azure;
+  border-radius: 2px;
+  margin: 0;
+  width: 200px;
+  padding-right: 5px;
+  line-height: 2rem;
+}
+
+#newCat{
+  height:352px;
+  max-height: 352px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+input[type="radio"] {
+  /* define the appearance of the unchecked checkbox */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color:  #c1c3c1;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid black;
+  border-radius: 20px;
+  
+}
+
+input[type="radio"]:checked {
+  /* define the appearance of the checked checkbox */
+  background-color: var(--blue-sticky);
+  border-color: var(--blue-sticky);
+}
+
+#emojCatCreate{
+  height: 176px;
+  width: 234px;
+  
+}
+
+.emojiBox{
+width:30px;
+}
+
+#create{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 80px;
+  width:234px;
+  
+}
+.color1{
+  color:var(--magenta-sticky)
+}
+.color2{
+  color:var(--blue-sticky)
+}
+.color3{
+  color:var(--teal-sticky)
+}
+.color4{
+  color:var(--yellow-sticky)
+}
+.color5{
+  color:var(--pink-sticky)
+}
+.color6{
+  color:var(--Yel-Grn-sticky)
 }
