--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -26,7 +26,7 @@
         <label for="password">Password:</label>
         <input type="password" id="login-password">
         <button id="login-button">Login</button>
-        <a href="/signup">Sign Up</a>
+        <a id="sI" href="/signup">Sign Up</a>
       </form>
 
       <script src="/js/login.js"></script>
