--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,8 @@
 </head>
 <body>
     <header>
-        <h1><a href="/">#ADULTING</a></h1>
+        <a href="/">#ADULTING</a> 
         <a href="/logout" id="logout">Logout</a>
-       
     </header>
 
     <main>
