--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -7,7 +7,7 @@
         <span id="line"></span>
         <div id="about">
           <p>
-            To get started, simply create a user account and choose from our templates or create your own customized reminders. You can easily set up recurring reminders to make sure you never miss an important task again. With Hashtag Adulting, you can focus on enjoying your life and let us take care of the details. Download our app today and start adulting like a pro!
+            To get started, simply create a user account and choose from our templates or create your own customized reminders. You can easily set up recurring reminders to make sure you never miss an important task again. With #Adulting, you can focus on enjoying your life and let us take care of the details. Download our app today and start adulting like a pro!
           </p>
         </div>
       </div>
