--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,7 +5,7 @@
         <h2 id="chalkHeader">Up next...</h2>
         <span id="lineDash"></span>
         <ol id="nextTasks">
-          {{#each upNext}}
+          {{#each chalkBoard}}
             <li class="task" data-ReminderId={{id}} {{#if overdue}}style="color:red"{{/if}}>{{Category.name}}: {{task}} - due: {{nextDue}}</li>
           {{/each}}
         </ol>
@@ -20,9 +20,9 @@
       </div>
       <div id="remindList">
           {{#each bigSticky.Reminders as |reminder|}}
-            <li class="reminders" data-ReminderId="{{id}}">{{task}} - due: {{nextDue}} 
+            <li class="reminders" data-ReminderId="{{id}}">{{task}} - due: {{nextDue}}
               {{#if isRecurring}} 
-              <i>every {{numPeriods}} {{timePeriod}}(s)</i>
+              <i>  every {{numPeriods}} {{timePeriod}}(s)</i>
               {{/if}}
             </li>
           {{/each}}
