--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,8 +42,7 @@ a:hover {
 body {
   background-image: url("../images/darkChalkBoard.jpg");
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat;
   min-height: 100%;
   line-height: 1;
   font-family: sans-serif;
@@ -123,6 +122,16 @@ header {
   font-size: 1.5rem;
   margin: 20px;
   color: rgb(232, 230, 230);
+  width:90%;
+ 
+
+}
+
+#logout{
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 16px;
 }
 
 main {
@@ -140,29 +149,27 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: first baseline;
   background-color: #f469f4;
-  /* border: 1px dashed grey; */
   height: 22rem;
   width: 22rem;
   padding: 15px;
-  animation-name: shrink;
+  /* animation-name: shrink;
   animation-duration: 1s;
-  animation-fill-mode: forwards;
+  animation-fill-mode: forwards; */
   margin-right: 50px;
 }
-@keyframes shrink {
-  from {
+/* @keyframes shrink { */
+  /* from { */
     /* start state of the animation */
-    width: 50rem;
-    height: 29rem;
-  }
-  to {
+    /* width: 50rem; */
+    /* height: 29rem; */
+  /* } */
+  /* to { */
     /* end state of the animation */
-    width: 22rem;
-    height: 22rem;
-  }
-}
+    /* width: 22rem; */
+    /* height: 22rem; */
+  /* } */
+/* } */
 
 #catchPhrase {
   display: flex;
@@ -202,7 +209,7 @@ main {
 #center {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 100vw;
 }
 
 #allHome {
@@ -223,14 +230,14 @@ main {
   height: 10rem;
   width: 10rem;
   margin: 20px 10px 20px 10px;
-  /* border: 1px dashed grey; */
+ 
 }
 #acc {
   margin: 5px;
 }
 
 #nextUp {
-  /* border: 1px dashed grey; */
+
   width: 75%;
   margin-left: 40px;
 }
@@ -252,18 +259,18 @@ main {
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
-@keyframes grow {
+/* @keyframes grow {
   from {
-    /* start state of the animation */
+   
     width: 22rem;
     height: 22rem;
   }
   to {
-    /* end state of the animation */
+
     width: 50rem;
     height: 29rem;
   }
-}
+} */
 
 ol {
   margin-top: 20px;
@@ -391,7 +398,7 @@ label {
   margin: 30px 0 30px 0;
 }
 
-.checkbox {
+.checkCircle {
   height: 2rem;
   width: 2rem;
   margin: 0;
@@ -556,3 +563,112 @@ width:2rem;
 .color6 {
   color: var(--Yel-Grn-sticky);
 }
+
+/* MEDIA QUERIES */
+
+/* Media queries for smaller screens */
+@media only screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.5rem;
+  }
+  
+  header a {
+    margin-bottom: 0.5rem;
+  }
+
+  main {
+    margin-top: 60px;
+  }
+}
+
+/* Media queries for even smaller screens */
+
+
+@media screen and (max-width: 992px) {
+body{
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+header{
+  max-width: 100vw;
+
+}
+
+#chalkboard{
+  width: 100vw;
+}
+
+#catchPhrase{
+  width: 100vw;
+}
+
+
+#center{
+width: 100vw;
+display: flex;
+flex-direction: column;
+justify-content: center;
+
+}
+#about{
+  width:100%;
+  text-align: center;
+}
+#desk{
+  max-width: 100vw;
+}
+#bigSticky{
+  animation: none;
+  margin-right:0px;
+
+}
+#catchPhrase{
+  margin-bottom: 10px;
+}
+}
+
+
+@media screen and (max-width: 576px) {
+/* html{
+  width:100vw;
+  display: flex;
+      justify-content: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+ }
+
+#center{
+  flex-direction: column;
+}
+#chalkboard{
+  width:100vw;
+}
+#catchPhrase{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  width:100vw;
+  font-size: 14px;
+
+
+}
+#bigSticky{
+  margin-top: 20px;
+  position: relative;
+}
+  header{
+    max-width: 100vh;
+    display: flex;
+    flex-direction: row;
+    
+  } */
+
+}
+
+@media only screen and (max-width: 480px) {
+
+}
+
