--- a/views/wizard.handlebars
+++ b/views/wizard.handlebars
@@ -6,15 +6,15 @@
         <span id="lineDash"></span>
         <ul id="categoryArr">
             <div class="checkCat">
-                <input type="checkbox" id="categoryName" class="checkbox">
+                <input type="checkbox" id="categoryName" class="checkCircle">
                 <label for="categoryName" class="wizLab">House</label>
           </div>
             <div class="checkCat">
-                <input type="checkbox" id="categoryName" class="checkbox">
+                <input type="checkbox" id="categoryName" class="checkCircle">
                 <label for="categoryName" class="wizLab">Pet</label>
           </div>
             <div class="checkCat">
-                <input type="checkbox" id="categoryName" class="checkbox">
+                <input type="checkbox" id="categoryName" class="checkCircle">
                 <label for="categoryName" class="wizLab">Car</label>
           </div>
            
