--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -24,7 +24,7 @@
         <input type="password" id="signup-password-confirmation">
         <button type="submit">Submit</button>
     </form>
-    <a id="sI" href="/home">Already have an account? Click here.</a>
+    <a id="sI" href="/">Already have an account? Click here.</a>
 
 <script src="/js/signup.js"></script>
 
