--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,7 +141,6 @@ main {
 
 #chalkBoard {
   /* border: 1px dashed grey; */
-  height: 20rem;
   width: 60%;
 }
 
@@ -569,50 +568,31 @@ width:2rem;
 
 
 @media screen and (max-width: 992px) {
-body{
-  margin-left: 40px;
-  margin-right: 40px;
+#nextUp{
+  max-height:464px ;
 }
 
-header{
-  max-width: 100vw;
+#chalkHeader{
+margin-top: 0;
+}
+
+  #nextTasks {
+  font-size:14px;
+  line-height: 20px;
+  max-height:400px;
+  overflow-y: auto;
+  padding-right: 5px;
+}
+
+li{
+  max-width: 100%;
+  overflow:auto;
+  overflow-wrap: break-word;
+}
 
 }
 
-#chalkboard{
-  width: 100vw;
-}
-
-#catchPhrase{
-  width: 100vw;
-}
-
-
-#center{
-width: 100vw;
-display: flex;
-flex-direction: column;
-justify-content: center;
-
-}
-#about{
-  width:100%;
-  text-align: center;
-}
-#desk{
-  max-width: 100vw;
-}
-#bigSticky{
-  animation: none;
-  margin-right:0px;
-
-}
-#catchPhrase{
-  margin-bottom: 10px;
-}
-}
-
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) {
   header {
     flex-direction: column;
     align-items: flex-start;
@@ -626,7 +606,7 @@ justify-content: center;
   main {
     margin-top: 60px;
   }
-}
+} */
 
 
 @media screen and (max-width: 576px) {
