--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -31,7 +31,7 @@
 
           {{/each}}
       </ol>
-      <div id="btn">;
+      <div id="btn">
         <button id="addTask">+ Add Task</button>
       </div>
 
