--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,7 +17,7 @@
 
     <aside id="bigSticky">
       <div id="logHead">
-        <h3 id="logTitle">Login</h3>
+        <h3 class="logTitle">Login</h3>
       </div>
       
       <form action="" id="login-form">
