--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -14,7 +14,7 @@
     </section>
 
     <aside id="bigSticky">
-<h4>Sign-Up!</h4>
+<h4 class="logTitle">Sign-Up!</h4>
     <form action="" id="signup-form">
       <label for="email">Email:</label>
         <input type="email" id="signup-email">
