--- a/public/css/style.css
+++ b/public/css/style.css
@@ -436,7 +436,7 @@ input[class="checkCircle"] {
   border-radius: 20px;
 }
 
-.checkCircle [type="checkbox"]:checked {
+input [class="checkCircle"]:checked {
   /* define the appearance of the checked checkbox */
   background-color: var(--blue-sticky);
   border-color: var(--blue-sticky);
