--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,13 +122,11 @@ header {
   font-size: 1.5rem;
   margin: 20px;
   color: rgb(232, 230, 230);
-  width:90%;
- 
-
+  width: 90%;
 }
 
-#logout{
-  font-family: 'Times New Roman', Times, serif;
+#logout {
+  font-family: "Times New Roman", Times, serif;
   font-weight: 300;
   font-style: normal;
   font-size: 16px;
@@ -158,16 +156,16 @@ main {
   margin-right: 50px;
 }
 /* @keyframes shrink { */
-  /* from { */
-    /* start state of the animation */
-    /* width: 50rem; */
-    /* height: 29rem; */
-  /* } */
-  /* to { */
-    /* end state of the animation */
-    /* width: 22rem; */
-    /* height: 22rem; */
-  /* } */
+/* from { */
+/* start state of the animation */
+/* width: 50rem; */
+/* height: 29rem; */
+/* } */
+/* to { */
+/* end state of the animation */
+/* width: 22rem; */
+/* height: 22rem; */
+/* } */
 /* } */
 
 #catchPhrase {
@@ -228,14 +226,12 @@ main {
   height: 10rem;
   width: 10rem;
   margin: 20px 10px 20px 10px;
- 
 }
 #acc {
   margin: 5px;
 }
 
 #nextUp {
-
   width: 75%;
   margin-left: 40px;
 }
@@ -291,6 +287,10 @@ li {
   text-align: left;
 }
 
+#emoji {
+  font-size: 50px;
+}
+
 #emoji1 {
   box-shadow: 0 0 12px -5px rgb(251, 250, 250);
   display: flex;
@@ -310,7 +310,7 @@ li {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   height: 5rem;
 }
 button {
@@ -360,12 +360,14 @@ button {
   color: rgb(57, 56, 56);
   font-weight: 900;
 }
-#login-form, #signup-form{
- display: flex;
+#login-form,
+#signup-form {
+  display: flex;
   flex-direction: column;
 }
 
-input, select {
+input,
+select {
   height: 35px;
   border: 2px solid rgb(129, 128, 128);
   border-radius: 6px;
@@ -532,8 +534,8 @@ input[type="radio"]:checked {
   width: 234px;
 }
 
-#emojiBox{
-width:2rem;
+#emojiBox {
+  width: 2rem;
 }
 
 #create {
@@ -564,112 +566,99 @@ width:2rem;
 
 /* MEDIA QUERIES */
 
-
-
 @media screen and (max-width: 992px) {
-#nextUp{
-  max-height:464px ;
-}
+  #nextUp {
+    max-height: 464px;
+  }
 
-#chalkHeader{
-margin-top: 0;
-}
+  #chalkHeader {
+    margin-top: 0;
+  }
 
   #nextTasks {
-  font-size:14px;
-  line-height: 20px;
-  max-height:400px;
-  overflow-y: auto;
-  padding-right: 5px;
-}
+    font-size: 14px;
+    line-height: 20px;
+    max-height: 400px;
+    overflow-y: auto;
+    padding-right: 5px;
+  }
 
-li{
-  max-width: 100%;
-  overflow:auto;
-  overflow-wrap: break-word;
+  li {
+    max-width: 100%;
+    overflow: auto;
+    overflow-wrap: break-word;
+  }
 }
-
-}
-
 
 @media screen and (max-width: 576px) {
-
-header{
+  header {
     max-width: 100vw;
   }
 
   #nextUP {
-    font-size:14px;
+    font-size: 14px;
     line-height: 20px;
-    max-height:200px;
+    max-height: 200px;
     overflow-y: auto;
     padding-right: 5px;
   }
-  
-  li{
+
+  li {
     max-width: 100%;
-    overflow:auto;
+    overflow: auto;
     overflow-wrap: break-word;
   }
-  
 
-#biggerSticky{
-  width:450px;
-  height: 450px;
-}
-#wizBtn{
-  display: flex;
-  justify-content: space-around;
-}
-#center{
-  margin-top: 0;
-  flex-direction: column;
-  align-items: center;
- 
-}
+  #biggerSticky {
+    width: 450px;
+    height: 450px;
+  }
+  #wizBtn {
+    display: flex;
+    justify-content: space-around;
+  }
+  #center {
+    margin-top: 0;
+    flex-direction: column;
+    align-items: center;
+  }
 
-#catchPhrase{
-  text-align: center;
-  height: 310px;
-}
+  #catchPhrase {
+    text-align: center;
+    height: 310px;
+  }
 
-#chalkBoard{
-  margin-top: 0;
-  width: 100vw;
+  #chalkBoard {
+    margin-top: 0;
+    width: 100vw;
+  }
 
-}
+  #about {
+    display: flex;
+    justify-content: center;
+    height: 300px;
+    overflow-y: auto;
+    padding-right: 5px;
+    width: 100%;
+    overflow-wrap: break-word;
+  }
 
-#about{
-  display:flex;
-  justify-content: center;
-  height: 300px;
-  overflow-y: auto;
-  padding-right: 5px;
-  width: 100%;
-  overflow-wrap: break-word;
-}
-
-aside{
-  display: flex;
-  justify-content: center;
-}
-
-
-
+  aside {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-#about{
-  height: 600px;
-  margin-bottom: 20px;
+  #about {
+    height: 600px;
+    margin-bottom: 20px;
+  }
+  span {
+    display: flex;
+    align-self: center;
+  }
+  #catchPhrase {
+    height: 380px;
+  }
 }
-span{
-  display:flex;
-  align-self: center;
-}
-#catchPhrase{
-
-  height: 380px;
-}
-}
-
