--- a/views/partials/sticky.handlebars
+++ b/views/partials/sticky.handlebars
@@ -1,4 +1,4 @@
 <div id="sticky" data-CategoryId={{id}} style="background-color:{{color}}">
-    <h5 style="pointer-events: none;">{{emoji}}</h5>
-    <h5 style="pointer-events: none;">{{name}}</h5>
+    <h5 id="lStickText"style="pointer-events: none;">{{name}}</h5>
+    <h5 id="lStickEmoj"style="pointer-events: none;">{{emoji}}</h5>
 </div>
