--- a/public/css/style.css
+++ b/public/css/style.css
@@ -426,7 +426,7 @@ label {
   margin-bottom: 5px;
   justify-content: flex-end;
 }
-input[class="checkCircle"] {
+.checkCircle {
   /* define the appearance of the unchecked checkbox */
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -438,7 +438,7 @@ input[class="checkCircle"] {
   border-radius: 20px;
 }
 
-input [class="checkCircle"]:checked {
+.checkCircle:checked {
   /* define the appearance of the checked checkbox */
   background-color: var(--blue-sticky);
   border-color: var(--blue-sticky);
