--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -43,8 +43,8 @@
     {{/each}}
 
     <div id="addCategory">
-      <h5>➕</h5>
-      <h5 id="acc">Add New Category</h5>
+      <h5 class="acc">➕</h5>
+      <h5 class="acc">Add New Category</h5>
     </div>
 
     <script src="/js/desk.js"></script>
